data/all_generated_tests/raw_wast_tests/block_MismanagementofBlockNesting_2255.wast
;; 6. **Test Description**: Construct a block containing a `loop` and within it another block with a `br` instruction aimed at both loop and outer block levels. Verify that each level's flow control is appropriately executed.    - **Constraint**: Validate nested block and loop with cross-nested branches.    - **Nesting Mismanagement Check**: Ensures nested branches target correct block or loop within the nesting stack.

(assert_invalid
  (module
    (func $nested_block_loop_br (result i32)
      (block (result i32)
        (loop (result i32)
          (block (result i32)
            (br 0 (i32.const 1)) ;; Branch to this block, but store incorrect value type in the stack.
          )
          (br 1 (i32.const 2)) ;; Branch to the enclosing block.
        )
      )
    )
  )
  "type mismatch"
)